@@ -20,6 +20,7 @@
 
 #include <QtGui/QMouseEvent>
 #include <QtGui/QPainter>
+#include <QMessageBox>
 
 #include <vector>
 
@@ -161,6 +162,62 @@ void EditInteraction::snapMouseReleaseEvent(QMouseEvent * ev , MapFeature* aLast
 				else
 					theList->add(new MoveTrackPointCommand(Moving[i],OriginalPosition[i]+Diff, document()->getDirtyOrOriginLayer(Moving[i]->layer())));
 			}
+
+			// If moving a single node (not a track node), see if it got dropped onto another node
+			if (Moving.size() == 1 && !Moving[0]->layer()->isTrack())
+			{
+				Coord newPos = OriginalPosition[0] + Diff;
+				std::vector<TrackPoint*> samePosPts;
+				for (VisibleFeatureIterator it(document()); !it.isEnd(); ++it)
+				{
+					TrackPoint* visPt = dynamic_cast<TrackPoint*>(it.get());
+					if (visPt)
+					{
+						if (visPt == Moving[0])
+							continue;
+
+						if (visPt->position() == newPos)
+						{
+							samePosPts.push_back(visPt);
+						}
+					}
+				}
+				// Ensure the node being moved is at the end of the list.
+				// (This is not the node that all nodes will be merged into,
+				// they are always merged into a node that already was at that position.)
+				samePosPts.push_back(Moving[0]);
+
+				if (samePosPts.size() > 1)   // Ignore the node we're moving, see if there are more
+				{
+					int ret = QMessageBox::question(view(),
+						MainWindow::tr("Nodes at the same position found."),
+						MainWindow::tr("Do you want to merge all nodes at the drop position?"),
+						QMessageBox::Yes | QMessageBox::No);
+					if (ret == QMessageBox::Yes)
+					{
+						// Merge all nodes from the same position
+
+						// from MainWindow::on_nodeMergeAction_triggered()
+						// Merge all nodes into the first node that has been found (not the node being moved)
+						MapFeature* F = samePosPts[0];
+						// Make a separate undo command list for this action
+						theList->setDescription(MainWindow::tr("Merge Nodes into %1").arg(F->id()));
+						theList->setFeature(F);
+						
+						// from mergeNodes(theDocument, theList, theProperties);
+						std::vector<MapFeature*> alt;
+						TrackPoint* merged = samePosPts[0];
+						alt.push_back(merged);
+						for (unsigned int i = 1; i < samePosPts.size(); ++i) {
+							MapFeature::mergeTags(document(), theList, merged, samePosPts[i]);
+							theList->add(new RemoveFeatureCommand(document(), samePosPts[i], alt));
+						}
+						
+						view()->properties()->setSelection(F);
+					}
+				}
+			}
+
 			document()->addHistory(theList);
 			view()->invalidate(true, false);
 		}
